--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,4 @@
-[[source]]
-url = "https://pypi.org/simple"
-verify_ssl = true
-name = "pypi"
-
-[packages]
-django = "*"
-
-[dev-packages]
-
-[requires]
-python_version = "3.10"
+https://pypi.org/simple
+asgiref==3.5.2; python_version >= '3.7'
+django==4.1.2
+sqlparse==0.4.3; python_version >= '3.5'
